[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pylowright"
version = "0.4"
description = "Pylowright browser automation helpers"
readme = "README.md"
authors = [
    { name = "Pylonium Contributors", email = "walia.raman89@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.39.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["playwright", "browser", "automation", "testing"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pylowright*"]
